--- a/docs/UML/classes/plan_item.adoc
+++ b/docs/UML/classes/plan_item.adoc
@@ -33,5 +33,5 @@ a|Optional wait specification for a Task. If not set, the Task is immediately av
 
 h|*0..1*
 |*review_dataset*: `List<DATASET_SPEC>`
-a|Optional data-set to review prior to / as part of performing the Plan element. This implies a data retrieval from the EHR or other system, which may be specified using a `SYSTEM_REQUEST` attached to this Task.
+a|Optional data-set to review prior to / as part of performing the Plan element.
 |===
