--- a/docs/tp_vml/master.adoc
+++ b/docs/tp_vml/master.adoc
@@ -31,7 +31,7 @@ image::/releases/BASE/latest/resources/images/openehr_logo_large.png["openEHR lo
 = Task Planning Visual Modelling Language (TP-VML)
 
 include::{base_dir}/docs_common/boilerplate/full_front_block.adoc[]
-include::{base_dir}/docs_common/references/openehr_resources.adoc[]
+include::{base_dir}/docs_common/references/reference_definitions.adoc[]
 
 //
 // ============================================= Asciidoc BODY ===============================================
@@ -90,7 +90,5 @@ include::master04-patterns.adoc[leveloffset=+1]
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
 //
-:sectnums!:
-== References
-
-//include::{base_dir}/docs_common/references/workflow_publications.adoc[leveloffset=+1]
+//:sectnums!:
+//== References
